@@ -10,3 +10,5 @@
 #define STM32_PPRE2                 STM32_PPRE2_DIV2
 #define STM32_ADCPRE                STM32_ADCPRE_DIV4
 #define STM32_MCO                   STM32_MCO_NOCLOCK
+
+#include "mcuconf-common.h"
